# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  add_func.c  checks.c  main.c  parse.c  prints.c  sort.c
inc/: ft_ls.h
libft/: CMakeLists.txt
libft/libft/: ft_numstr.c  libft.h
printf/includes/: printf.h
printf/src/libft/: Makefile  ft_atoi_wr.c  ft_numstr.c  libft.h
